feat: Do not render bar nor label for missing data points if `missingDataLabel` set
